--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wiztools</groupId>
-    <artifactId>staticsitegen</artifactId>
+    <artifactId>stagen</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.wiztools.stagen.StaGenMain</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -27,11 +55,6 @@
             <artifactId>guice</artifactId>
             <version>3.0</version>
         </dependency>
-        <!--dependency>
-            <groupId>com.mycila</groupId>
-            <artifactId>mycila-guice</artifactId>
-            <version>2.10.ga</version>
-        </dependency-->
         <dependency>
             <groupId>com.mycila</groupId>
             <artifactId>mycila-guice</artifactId>
