--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>stringtemplate</artifactId>
-            <version>4.0.2</version>
+            <artifactId>ST4</artifactId>
+            <version>4.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.tautua.markdownpapers</groupId>
