assembly name changed from jar-with-dependencies to full.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -19,6 +20,9 @@
                             <mainClass>org.wiztools.stagen.StaGenMain</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>${project.artifactId}-${project.version}-full</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <attach>false</attach>
                 </configuration>
                 <executions>
                     <execution>
