--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
     <artifactId>stagen</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <url>https://github.com/wiztools/stagen</url>
+    
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+        </license>
+    </licenses>
+    
+    <scm>
+        <connection>scm:git:https://github.com/wiztools/stagen.git</connection>
+    </scm>
     
     <build>
         <plugins>
