--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
     
     <scm>
         <connection>scm:git:https://github.com/wiztools/stagen.git</connection>
-  </scm>
+        <developerConnection>scm:git:https://github.com/wiztools/stagen.git</developerConnection>
+        <url>https://github.com/wiztools/stagen</url>
+    </scm>
     
     <build>
         <plugins>
