--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
             <version>4.0.8</version>
         </dependency>
         <dependency>
-            <groupId>org.tautua.markdownpapers</groupId>
-            <artifactId>markdownpapers-core</artifactId>
-            <version>1.4.2</version>
+            <groupId>org.commonjava.googlecode.markdown4j</groupId>
+            <artifactId>markdown4j</artifactId>
+            <version>2.2-cj-1.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
