--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/wiztools/stagen.git</connection>
         <developerConnection>scm:git:https://github.com/wiztools/stagen.git</developerConnection>
         <url>https://github.com/wiztools/stagen</url>
-  </scm>
+    </scm>
     
     <build>
         <plugins>
@@ -79,9 +79,9 @@
             <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>com.mycila</groupId>
-            <artifactId>mycila-guice</artifactId>
-            <version>2.10.ga</version>
+            <groupId>com.mycila.guice.extensions</groupId>
+            <artifactId>mycila-guice-jsr250</artifactId>
+            <version>3.2.ga</version>
         </dependency>
         <dependency>
             <groupId>org.wiztools.commons</groupId>
