--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                         <phase>package</phase>
                         <configuration>
                             <target name="runbuild">
-                                <echo>Assembling to: ${assembleDirectory}</echo>
+                                <echo>Assembling: ${assembleDirectory}</echo>
                                 <zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip"
                                     basedir="${project.build.directory}"
                                     includes="${project.artifactId}-${project.version}/**/*"/>
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>com.mycila.guice.extensions</groupId>
             <artifactId>mycila-guice-jsr250</artifactId>
-            <version>3.2.ga</version>
+            <version>3.5.ga</version>
         </dependency>
         <dependency>
             <groupId>org.wiztools.commons</groupId>
