--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
+                <version>2.5.1</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -105,13 +105,24 @@
                         <configuration>
                             <target name="runbuild">
                                 <echo>Assembling: ${assembleDirectory}</echo>
-                                <zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip"
-                                    basedir="${project.build.directory}"
-                                    includes="${project.artifactId}-${project.version}/**/*"/>
-                                <tar destfile="${project.build.directory}/${project.artifactId}-${project.version}.tgz"
-                                    basedir="${project.build.directory}"
-                                    includes="${project.artifactId}-${project.version}/**/*"
-                                    compression="gzip"/>
+                                <zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip">
+                                    <zipfileset dir="${project.build.directory}">
+                                        <include name="${project.artifactId}-${project.version}/**/*"/>
+                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                    </zipfileset>
+                                    <zipfileset dir="${project.build.directory}" filemode="755">
+                                        <include name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                    </zipfileset>
+                                </zip>
+                                <tar destfile="${project.build.directory}/${project.artifactId}-${project.version}.tgz">
+                                    <tarfileset dir="${project.build.directory}">
+                                        <include name="${project.artifactId}-${project.version}/**/*"/>
+                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                    </tarfileset>
+                                    <tarfileset dir="${project.build.directory}" filemode="755">
+                                        <include name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                    </tarfileset>
+                                </tar>
                             </target>
                         </configuration>
                         <goals>
@@ -123,12 +134,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.5.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
-                <version>1.9</version>
+                <version>1.9.2</version>
             </plugin>
         </plugins>
     </build>
