--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wiztools</groupId>
     <artifactId>stagen</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
+    <version>0.3.2</version>
     <packaging>jar</packaging>
     <url>https://github.com/wiztools/stagen</url>
     
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/wiztools/stagen.git</connection>
         <developerConnection>scm:git:git@github.com:wiztools/stagen.git</developerConnection>
         <url>https://github.com/wiztools/stagen</url>
-        <tag>HEAD</tag>
+        <tag>stagen-0.3.2</tag>
     </scm>
     
     <properties>
@@ -66,7 +66,7 @@
                     <repositoryName>lib</repositoryName>
                     <showConsoleWindow>true</showConsoleWindow>
                     <binFileExtensions>
-                        <unix></unix>
+                        <unix />
                         <windows>.bat</windows>
                     </binFileExtensions>
                     <extraJvmArguments>-Xms128m</extraJvmArguments>
@@ -107,20 +107,20 @@
                                 <echo>Assembling: ${assembleDirectory}</echo>
                                 <zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip">
                                     <zipfileset dir="${project.build.directory}">
-                                        <include name="${project.artifactId}-${project.version}/**/*"/>
-                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                        <include name="${project.artifactId}-${project.version}/**/*" />
+                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen" />
                                     </zipfileset>
                                     <zipfileset dir="${project.build.directory}" filemode="755">
-                                        <include name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                        <include name="${project.artifactId}-${project.version}/bin/stagen" />
                                     </zipfileset>
                                 </zip>
                                 <tar destfile="${project.build.directory}/${project.artifactId}-${project.version}.tgz">
                                     <tarfileset dir="${project.build.directory}">
-                                        <include name="${project.artifactId}-${project.version}/**/*"/>
-                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                        <include name="${project.artifactId}-${project.version}/**/*" />
+                                        <exclude name="${project.artifactId}-${project.version}/bin/stagen" />
                                     </tarfileset>
                                     <tarfileset dir="${project.build.directory}" filemode="755">
-                                        <include name="${project.artifactId}-${project.version}/bin/stagen"/>
+                                        <include name="${project.artifactId}-${project.version}/bin/stagen" />
                                     </tarfileset>
                                 </tar>
                             </target>
