--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wiztools</groupId>
     <artifactId>stagen</artifactId>
-    <version>0.3.2</version>
+    <version>0.3.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>https://github.com/wiztools/stagen</url>
     
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/wiztools/stagen.git</connection>
         <developerConnection>scm:git:git@github.com:wiztools/stagen.git</developerConnection>
         <url>https://github.com/wiztools/stagen</url>
-        <tag>stagen-0.3.2</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <properties>
