--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.0.3'
-  }
-}
+// buildscript {
+//   repositories {
+//     jcenter()
+//   }
+//   dependencies {
+//     classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.2.0'
+//   }
+// }
 
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'ca.cutterslade.analyze'
-apply plugin: 'jacoco'
+// apply plugin: 'ca.cutterslade.analyze'
+// apply plugin: 'jacoco'
 
-analyzeClassesDependencies {
-  justWarn = true
-}
-analyzeTestClassesDependencies {
-  justWarn = true
-}
+// analyzeClassesDependencies {
+//   justWarn = true
+// }
+// analyzeTestClassesDependencies {
+//   justWarn = true
+// }
 
 // Application plugin config:
 mainClassName = 'org.wiztools.stagen.StaGenMain'
@@ -38,13 +38,12 @@ repositories {
 
 dependencies {
   compile 'org.antlr:ST4:4.0.8',
-    'org.commonjava.googlecode.markdown4j:markdown4j:2.2-cj-1.0',
-    'com.google.inject:guice:3.0',
-    'com.mycila.guice.extensions:mycila-guice-jsr250:3.5.ga',
-    'org.wiztools.commons:wiztools-commons-lib:0.4.1',
+    'org.commonjava.googlecode.markdown4j:markdown4j:2.2-cj-1.1',
+    'javax.inject:javax.inject:1',
+    'org.wiztools:commons-lib:0.4.2',
     'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
-    'commons-io:commons-io:2.4',
-    'com.google.code.cli-parser:cli:7',
-    'org.eclipse.jetty:jetty-server:9.2.5.v20141112'
+    'commons-io:commons-io:2.6',
+    'com.github.spullara.cli-parser:cli-parser:1.1.2',
+    'org.eclipse.jetty:jetty-server:9.4.9.v20180320'
   testCompile 'junit:junit:4.+'
 }
