--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
-apply plugin: 'java'
-apply plugin: 'application'
+plugins {
+  id 'java'
+  id 'application'
+}
 
-// Application plugin config:
-mainClassName = 'org.wiztools.stagen.StaGenMain'
-applicationName = 'stagen'
-applicationDefaultJvmArgs = ['-Xms128m', '-Xmx512m']
+application {
+  mainClass = 'org.wiztools.stagen.StaGenMain'
+  applicationName = 'stagen'
+  applicationDefaultJvmArgs = ['-Xms128m', '-Xmx512m']
+}
 
 allprojects {
   tasks.withType(JavaCompile) {
@@ -15,11 +18,11 @@ allprojects {
 repositories {
   mavenLocal()
   mavenCentral()
-  maven { url "https://jitpack.io" }
+  maven { url = "https://jitpack.io" }
 }
 
 dependencies {
-  compile 'org.antlr:ST4:4.0.8',
+  implementation 'org.antlr:ST4:4.0.8',
     'org.commonjava.googlecode.markdown4j:markdown4j:2.2-cj-1.1',
     'javax.inject:javax.inject:1',
     'org.wiztools:commons-lib:0.4.2',
@@ -27,5 +30,5 @@ dependencies {
     'commons-io:commons-io:2.6',
     'com.github.spullara.cli-parser:cli-parser:1.1.2',
     'org.eclipse.jetty:jetty-server:9.4.9.v20180320'
-  testCompile 'junit:junit:4.+'
+  testImplementation 'junit:junit:4.+'
 }
