--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ repositories {
 }
 
 dependencies {
-  implementation 'org.antlr:ST4:4.0.8',
+  implementation 'org.antlr:ST4:4.3.4',
     'org.commonjava.googlecode.markdown4j:markdown4j:2.2-cj-1.1',
     'javax.inject:javax.inject:1',
     'org.wiztools:commons-lib:0.4.2',
     'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
-    'commons-io:commons-io:2.6',
-    'com.github.spullara.cli-parser:cli-parser:1.1.2',
-    'org.eclipse.jetty:jetty-server:9.4.9.v20180320'
+    'commons-io:commons-io:2.18.0',
+    'com.github.spullara.cli-parser:cli-parser:1.1.6',
+    'org.eclipse.jetty:jetty-server:11.0.25'
   testImplementation 'junit:junit:4.+'
 }
