--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
 plugins {
   id 'java'
   id 'application'
+  id 'com.gradleup.shadow' version '9.0.0-beta11'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 application {
   mainClass = 'org.wiztools.stagen.StaGenMain'
   applicationName = 'stagen'
   applicationDefaultJvmArgs = ['-Xms128m', '-Xmx512m']
+}
+
+tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+  archiveClassifier = 'fat'
 }
 
 allprojects {
