we now generate tgz distributions in place of tar ones

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ application {
   applicationDefaultJvmArgs = ['-Xms128m', '-Xmx512m']
 }
 
+tasks.withType(Tar) {
+    compression = Compression.GZIP
+    archiveExtension = 'tgz' // set the extension to .tgz instead of .tar.gz
+}
+
 tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
   archiveClassifier = 'fat'
 }
